--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				var data = await response.json();                // array of objects
 
 				var tableContents = "<table cellspacing='5'>"
-				tableContents += "<bold><tr><td>Name</td><td>Major</td><td>Midterm</td><td>Final</td></tr></bold>";
+				tableContents += "<h6><tr><td>Name</td><td>Major</td><td>Midterm</td><td>Final</td></tr></h6>";
 					
             	for(i = 0; i < data.length; i++) {
                     tableContents += `<tr><td> ${data[i].name} </td>
